<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dlWeather"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGreenJungle">

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintEnd_toStartOf="@+id/ivMenu"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvLoacation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                android:text="Location"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </HorizontalScrollView>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/slHome"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llNavigation">

            <android.support.v4.view.ViewPager
                android:id="@+id/vpHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llNavigation" />
        </android.support.v4.widget.SwipeRefreshLayout>

        <LinearLayout
            android:id="@+id/llNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

            <com.stdiohue.phamduc.kotlin_viper.utils.BottomNavButton
                android:id="@+id/bnCurrently"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.stdiohue.phamduc.kotlin_viper.utils.BottomNavButton
                android:id="@+id/bnHourly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.stdiohue.phamduc.kotlin_viper.utils.BottomNavButton
                android:id="@+id/bnDaily"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/ic_more_white"
            app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/horizontalScrollView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/ic_location_white"
            app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/horizontalScrollView" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_gravity="end"
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGreenJungle"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/setting"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/tvChangeLocation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="15dp"
            android:text="@string/change_your_location" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrayLight" />

        <TextView
            android:id="@+id/tvViewAnimation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/view_weather_animation" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrayLight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/temperature" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/f" />

            <Switch
                android:id="@+id/swTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/c" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrayLight" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/ngon_ngu" />

            <Spinner
                android:id="@+id/snChangeLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrayLight" />

        <TextView
            android:id="@+id/tvCopyRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/copy_right" />
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
